adding user model complete adding signup page to test db.  credit and debit models incomplete

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 	<body>
 		<script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <script src="app.js"></script>
 
 		<h2>Pocket Accountant</h2>
 		<div ng-view>
