--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,4 +1,4 @@
-<div ng-controller="authController">
+<div ng-controller="AuthController">
 	<form>
 		<input ng-model="user.username" type="text">
 		<input ng-model="user.password" type="password">
