--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
 		<script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
+    <script src="app/auth/authController.js"></script>
+    <script src="app/services/services.js"></script>
 
 		<h2>Pocket Accountant</h2>
 		<div ng-view>
