debugging login feature.  added erik's suggestion for a quick fix to store user info ($window.localStorage).

--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -2,7 +2,7 @@
 	<form>
 		<input ng-model="user.username" type="text">
 		<input ng-model="user.password" type="password">
-		<button type=submit ng-click="addUser()">Add New User</button>
+		<button type=submit ng-click="login()">Login</button>
 
 	</form>
 
