fleshing out summary page. added route to add a credit. added credit model. add empty css file.

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,10 @@
 	<body>
 		<script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="app.js"></script>
     <script src="app/auth/authController.js"></script>
+    <script src="app/summary/summary.js"></script>
     <script src="app/services/services.js"></script>
+    <script src="app.js"></script>
 
 		<h2>Pocket Accountant</h2>
 		<div ng-view>
