--- a/client/app/summary/summary.html
+++ b/client/app/summary/summary.html
@@ -21,6 +21,8 @@
 </table>
 <form>
 	<input type="text" ng-model="creditAmmount">
-	<button type="submit" ng-click="addCredit()"></button>
+	<button type="submit" ng-click="addCredit()">
+		Add Credit
+	</button>
 </form>
 </div>
