--- a/client/app/summary/summary.html
+++ b/client/app/summary/summary.html
@@ -19,15 +19,31 @@
 		</td>
 	</tr>
 </table>
-<form>
-	<input type="text" ng-model="creditAmmount">
-	<button type="submit" ng-click="addCredit()">
-		Add Credit
+<div class="credits">
+	<form>
+		<input type="text" ng-model="creditAmmount">
+		<button type="submit" ng-click="addCredit()">
+			Add Credit
+		</button>
+	</form>
+	<button ng-click="getCredits()">
+		Get Credits
 	</button>
-</form>
-<button ng-click="getCredits()">
-	Add Credit
-</button>
+</div>
+<br>
+<div class="debits">
+	<form>
+		<input type="text" ng-model="debitAmmount">
+		<button type="submit" ng-click="addDebit()">
+			Add Debit
+		</button>
+	</form>
+	<button ng-click="getDebits()">
+		Get Debits
+	</button>
+</div>
+
+
 Credits: {{ credits }}
 
 </div>
