--- a/client/app/summary/summary.html
+++ b/client/app/summary/summary.html
@@ -8,6 +8,10 @@
 		View Outgoing Payments
 	</span>
 	 | 
+	<span ng-click=viewSummary()>
+		View Account Summary
+	</span>
+	 |
 	<span class=logout ng-click=logout()>
 		Logout
 	</span>
